Completed implementation of the SignIn and SignUp functionalities.

--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -22,7 +22,6 @@
         android:layout_gravity="bottom"
         android:gravity="center_horizontal"
         style="@style/TextAppearance.AppCompat.Subhead"
-        android:textSize="20sp"
-        android:text="Ugo Mmirikwe" />
+        android:textSize="20sp" />
 
 </FrameLayout>
